[gd_scene load_steps=25 format=2]

[ext_resource path="res://producto/scripts/Plataformas/Coleccionable.gd" type="Script" id=1]
[ext_resource path="res://producto/assets/img/Plataformas/Objects/Obj-Chest-Closed-24x24.png" type="Texture" id=2]
[ext_resource path="res://producto/assets/img/Plataformas/Objects/Obj-Chest-Opening-24x24.png" type="Texture" id=3]
[ext_resource path="res://producto/assets/fonts/FontInicio.tres" type="DynamicFont" id=4]
[ext_resource path="res://producto/assets/fonts/AmberTastePro-Bold.ttf" type="DynamicFontData" id=5]
[ext_resource path="res://producto/assets/img/Plataformas/Discos/fil_top.png" type="Texture" id=6]
[ext_resource path="res://producto/assets/img/Plataformas/Discos/fil_bot.png" type="Texture" id=7]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 250.371, 98.7573 )

[sub_resource type="AtlasTexture" id=2]
atlas = ExtResource( 3 )
region = Rect2( 24, 24, 24, 24 )

[sub_resource type="AtlasTexture" id=3]
atlas = ExtResource( 3 )
region = Rect2( 0, 24, 24, 24 )

[sub_resource type="AtlasTexture" id=4]
atlas = ExtResource( 3 )
region = Rect2( 24, 0, 24, 24 )

[sub_resource type="AtlasTexture" id=5]
atlas = ExtResource( 3 )
region = Rect2( 0, 0, 24, 24 )

[sub_resource type="AtlasTexture" id=6]
atlas = ExtResource( 3 )
region = Rect2( 0, 0, 24, 24 )

[sub_resource type="AtlasTexture" id=7]
atlas = ExtResource( 3 )
region = Rect2( 24, 0, 24, 24 )

[sub_resource type="AtlasTexture" id=8]
atlas = ExtResource( 3 )
region = Rect2( 0, 24, 24, 24 )

[sub_resource type="AtlasTexture" id=9]
atlas = ExtResource( 3 )
region = Rect2( 24, 24, 24, 24 )

[sub_resource type="AtlasTexture" id=10]
atlas = ExtResource( 3 )
region = Rect2( 24, 24, 24, 24 )

[sub_resource type="AtlasTexture" id=11]
atlas = ExtResource( 2 )
region = Rect2( 0, 0, 24, 24 )

[sub_resource type="SpriteFrames" id=12]
animations = [ {
"frames": [ SubResource( 2 ), SubResource( 3 ), SubResource( 4 ), SubResource( 5 ) ],
"loop": false,
"name": "Close",
"speed": 4.0
}, {
"frames": [ SubResource( 6 ), SubResource( 7 ), SubResource( 8 ), SubResource( 9 ) ],
"loop": false,
"name": "Open",
"speed": 4.0
}, {
"frames": [ SubResource( 10 ) ],
"loop": false,
"name": "Idle_Open",
"speed": 5.0
}, {
"frames": [ SubResource( 11 ) ],
"loop": false,
"name": "Idle_Close",
"speed": 5.0
} ]

[sub_resource type="DynamicFont" id=17]
size = 50
outline_color = Color( 0.823529, 0.67451, 0.423529, 1 )
use_mipmaps = true
use_filter = true
extra_spacing_char = 1
font_data = ExtResource( 5 )

[sub_resource type="Animation" id=13]
resource_name = "Activo"
length = 4.0
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("cartel:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = false
tracks/0/keys = {
"times": PoolRealArray( 4 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ true ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("cartel/fil_bot:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 4 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( -35.582, 110 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("cartel/fil_top:position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 4 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( -35.582, 100 ) ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("cartel/fil_top:rotation_degrees")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 4 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 0.0 ]
}
tracks/4/type = "value"
tracks/4/path = NodePath("cartel/fil_bot:rotation_degrees")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 4 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 0.0 ]
}
tracks/5/type = "value"
tracks/5/path = NodePath("cartel/fil_bot:self_modulate")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/keys = {
"times": PoolRealArray( 4 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ) ]
}
tracks/6/type = "value"
tracks/6/path = NodePath("cartel/fil_top:self_modulate")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/keys = {
"times": PoolRealArray( 4 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ) ]
}
tracks/7/type = "value"
tracks/7/path = NodePath("cartel/nombre:modulate")
tracks/7/interp = 1
tracks/7/loop_wrap = true
tracks/7/imported = false
tracks/7/enabled = true
tracks/7/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ) ]
}
tracks/8/type = "value"
tracks/8/path = NodePath("cartel/recoger:modulate")
tracks/8/interp = 1
tracks/8/loop_wrap = true
tracks/8/imported = false
tracks/8/enabled = true
tracks/8/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ) ]
}
tracks/9/type = "value"
tracks/9/path = NodePath("cartel/nombre:rect_position")
tracks/9/interp = 1
tracks/9/loop_wrap = true
tracks/9/imported = false
tracks/9/enabled = true
tracks/9/keys = {
"times": PoolRealArray( 4 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( -386.295, 20 ) ]
}

[sub_resource type="Animation" id=14]
resource_name = "Hover"
length = 4.0
tracks/0/type = "value"
tracks/0/path = NodePath("cartel:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 4 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ true, true ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("cartel/fil_bot:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 4 ),
"transitions": PoolRealArray( 0.176777, 1 ),
"update": 0,
"values": [ Vector2( -35.5817, 71.9899 ), Vector2( -35.582, 110 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("cartel/fil_top:position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 4 ),
"transitions": PoolRealArray( 0.125, 1 ),
"update": 0,
"values": [ Vector2( -35.5817, 186.276 ), Vector2( -35.582, 100 ) ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("cartel/fil_top:rotation_degrees")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0, 4 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ 0.0, 0.0 ]
}
tracks/4/type = "value"
tracks/4/path = NodePath("cartel/fil_bot:rotation_degrees")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0, 4 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ 0.0, 0.0 ]
}
tracks/5/type = "value"
tracks/5/path = NodePath("cartel/fil_bot:self_modulate")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/keys = {
"times": PoolRealArray( 0, 4 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ) ]
}
tracks/6/type = "value"
tracks/6/path = NodePath("cartel/fil_top:self_modulate")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/keys = {
"times": PoolRealArray( 0, 4 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ) ]
}
tracks/7/type = "value"
tracks/7/path = NodePath("cartel/recoger:modulate")
tracks/7/interp = 1
tracks/7/loop_wrap = true
tracks/7/imported = false
tracks/7/enabled = true
tracks/7/keys = {
"times": PoolRealArray( 0, 4 ),
"transitions": PoolRealArray( 0.392292, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ) ]
}
tracks/8/type = "value"
tracks/8/path = NodePath("cartel/nombre:modulate")
tracks/8/interp = 1
tracks/8/loop_wrap = true
tracks/8/imported = false
tracks/8/enabled = true
tracks/8/keys = {
"times": PoolRealArray( 0, 4 ),
"transitions": PoolRealArray( 0.31864, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ) ]
}
tracks/9/type = "value"
tracks/9/path = NodePath("cartel/nombre:rect_position")
tracks/9/interp = 1
tracks/9/loop_wrap = true
tracks/9/imported = false
tracks/9/enabled = true
tracks/9/keys = {
"times": PoolRealArray( 0, 4 ),
"transitions": PoolRealArray( 0.133972, 1 ),
"update": 0,
"values": [ Vector2( -386.295, 40 ), Vector2( -386.295, 20 ) ]
}

[sub_resource type="Animation" id=15]
resource_name = "Inactivo"
length = 4.0
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("cartel:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = false
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ true ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("cartel/fil_bot:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 0.176777 ),
"update": 0,
"values": [ Vector2( -35.5817, 71.9899 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("cartel/fil_top:position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 0.125 ),
"update": 0,
"values": [ Vector2( -35.5817, 186.276 ) ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("cartel/fil_top:rotation_degrees")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 0.0 ]
}
tracks/4/type = "value"
tracks/4/path = NodePath("cartel/fil_bot:rotation_degrees")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 0.0 ]
}
tracks/5/type = "value"
tracks/5/path = NodePath("cartel/fil_bot:self_modulate")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ) ]
}
tracks/6/type = "value"
tracks/6/path = NodePath("cartel/fil_top:self_modulate")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ) ]
}

[sub_resource type="RectangleShape2D" id=16]
extents = Vector2( 250, 125 )

[node name="Coleccionable" type="Node2D"]
script = ExtResource( 1 )

[node name="ColeccionableArea" type="Area2D" parent="."]

[node name="ColeccionableOpen" type="CollisionShape2D" parent="ColeccionableArea"]
position = Vector2( 5.61218, -66.2256 )
shape = SubResource( 1 )

[node name="Coleccionable" type="AnimatedSprite" parent="ColeccionableArea"]
scale = Vector2( 4, 4 )
z_index = 1
frames = SubResource( 12 )
animation = "Idle_Close"
speed_scale = 2.0
playing = true

[node name="cartel" type="Sprite" parent="."]
position = Vector2( 28.7288, -142.492 )
scale = Vector2( 0.7, 0.7 )

[node name="fil_bot" type="Sprite" parent="cartel"]
self_modulate = Color( 1, 1, 1, 0 )
position = Vector2( -35.5817, 71.9899 )
scale = Vector2( 0.7, 0.7 )
texture = ExtResource( 7 )

[node name="nombre" type="Label" parent="cartel"]
modulate = Color( 1, 1, 1, 0 )
margin_left = -386.295
margin_top = 40.0
margin_right = 308.705
margin_bottom = 160.0
custom_fonts/font = ExtResource( 4 )
custom_colors/font_color = Color( 0.933333, 0.933333, 0.933333, 1 )
text = "Prueba"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="fil_top" type="Sprite" parent="cartel"]
self_modulate = Color( 1, 1, 1, 0 )
position = Vector2( -35.5817, 186.276 )
scale = Vector2( 0.7, 0.7 )
texture = ExtResource( 6 )

[node name="recoger" type="Label" parent="cartel"]
modulate = Color( 1, 1, 1, 0 )
margin_left = -101.326
margin_top = 115.56
margin_right = 77.6742
margin_bottom = 166.56
rect_scale = Vector2( 0.7, 0.7 )
custom_fonts/font = SubResource( 17 )
custom_colors/font_color = Color( 0.933333, 0.933333, 0.933333, 1 )
text = "recoger"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="AnimationCartel" type="AnimationPlayer" parent="."]
playback_speed = 2.0
anims/Activo = SubResource( 13 )
anims/Hover = SubResource( 14 )
anims/Inactivo = SubResource( 15 )

[node name="ConseguirColeccionable" type="TouchScreenButton" parent="."]
position = Vector2( -245.819, -278.371 )
shape = SubResource( 16 )

[connection signal="body_entered" from="ColeccionableArea" to="." method="_on_ColeccionableArea_body_entered"]
[connection signal="body_exited" from="ColeccionableArea" to="." method="_on_ColeccionableArea_body_exited"]
[connection signal="animation_finished" from="AnimationCartel" to="." method="_on_AnimationCartel_animation_finished"]
[connection signal="pressed" from="ConseguirColeccionable" to="." method="_on_ConseguirColeccionable_pressed"]
